Exercise 2 refactored with Stream API